app/styles/app.scss
@import 'bootstrap';
@import 'bootstrap/theme';

body {
  background-color: rgb(241,241,241);
}

.cancel-riff-btn {
  height: 31px;
}

.chat-box {
  -moz-appearance: textfield-multiline;
  -webkit-appearance: textarea;
  border: 1px solid gray;
  height: 325px;
  overflow: auto;
  padding: 2px;
  resize: both;
  width: 100%;

  @media (max-width: 992px) {
    width: 640px;
  };
}

.create-riff-box {
  height: 33px;
  margin-top: 2px;
  width: calc(100% - 52.5px);

  @media (max-width: 992px) {
    width: calc(640px - 52.5px);
  };

  @media (max-width: 698px) {
    width: calc(100% - 52.5px);
  }
}

.create-riff-btn {
  margin-top: -25px;
  position: relative;
}

.edit-riff-box {
  height: 440px;
  overflow: auto;
  width: 100%;
  word-wrap: normal;
}

.edit-riff-btn {
  height: 31px;
}

.navbar-form {
  margin-top: 2px;
}

.search-box {
  height: 40px;
  margin-top: 4px;
}

.search-btn {
  display: inline-block;
  float: left;
}

.search-form {
  margin-left: auto;
  margin-right: auto;
}

.search-li {
  height: 50px;
}

